Enable HTTPS for eestec.ece.upatras.gr

--- a/eestec-site/templates/nginx.conf
+++ b/eestec-site/templates/nginx.conf
@@ -34,8 +34,8 @@ server {
     add_header Strict-Transport-Security "max-age=31536000" always;
 
     # Location of the certificates
-    ssl_certificate /etc/ssl/live/{{ domain }}/fullchain.pem;
-    ssl_certificate_key /etc/ssl/live/{{ domain }}/privkey.pem;
+    ssl_certificate /etc/ssl/{{ domain }}/live/{{ domain }}/fullchain.pem;
+    ssl_certificate_key /etc/ssl/{{ domain }}/live/{{ domain }}/privkey.pem;
 
     # Only allow TLS, disallow any insecure versions/ciphers
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
