--- a/nginx/tasks/main.yml
+++ b/nginx/tasks/main.yml
@@ -46,7 +46,8 @@
           - "80:80"
           - "443:443"
         volumes:
-          - /docker/ssl:/etc/ssl
+          - /docker/ssl:/etc/ssl/{{ domain }}
+          - /etc/letsencrypt:/etc/ssl/eestec.ece.upatras.gr
           - /docker/nginx:/docker
           - /home/docker/nginx/assets/nginx.conf:/etc/nginx/nginx.conf
           - /home/docker/nginx/assets/sites-enabled:/etc/nginx/sites-enabled
